updated user, kyc and search controller
