# controllers/workingAreaController.go
@@ -9,7 +9,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// CreateWorkingArea creates a new working area for a user.
+type CreateWorkingAreaRequest struct {
+	AreaName   string                `json:"area_name" binding:"required"`
+	Activities []CreateActivityItems `json:"activities" binding:"required"`
+}
+
+type UpdateWorkingAreaRequest struct {
+	AreaName   string                `json:"area_name"`
+	Activities []UpdateActivityItems `json:"activities"`
+}
+
 func CreateWorkingArea(c *gin.Context) {
 	userRole, exists := c.Get("role")
 	if !exists || userRole != "ADMIN" {
@@ -17,10 +26,25 @@ func CreateWorkingArea(c *gin.Context) {
 		return
 	}
 
-	var workingArea models.WorkingArea
-	if err := c.BindJSON(&workingArea); err != nil {
+	var req CreateWorkingAreaRequest
+	if err := c.BindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to read body"})
 		return
+	}
+
+	var workingArea models.WorkingArea
+	workingArea.AreaName = req.AreaName
+
+	for _, activityReq := range req.Activities {
+		activity := models.Activity{ActivityName: activityReq.ActivityName}
+
+		if len(activityReq.Items) > 0 {
+			for _, item := range activityReq.Items {
+				activity.Items = append(activity.Items, models.ActivityItem{Name: item})
+			}
+		}
+
+		workingArea.Activities = append(workingArea.Activities, activity)
 	}
 
 	result := initializers.DB.Create(&workingArea)
@@ -32,7 +56,6 @@ func CreateWorkingArea(c *gin.Context) {
 	c.JSON(http.StatusOK, workingArea)
 }
 
-// GetWorkingArea retrieves working area by ID.
 func GetWorkingArea(c *gin.Context) {
 	userRole, exists := c.Get("role")
 	if !exists || userRole != "ADMIN" {
@@ -44,7 +67,7 @@ func GetWorkingArea(c *gin.Context) {
 	workingAreaID, _ := strconv.ParseUint(id, 10, 64)
 
 	var workingArea models.WorkingArea
-	result := initializers.DB.First(&workingArea, workingAreaID)
+	result := initializers.DB.Preload("Activities").First(&workingArea, workingAreaID)
 	if result.Error != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Working area not found"})
 		return
@@ -53,7 +76,6 @@ func GetWorkingArea(c *gin.Context) {
 	c.JSON(http.StatusOK, workingArea)
 }
 
-// UpdateWorkingArea updates an existing working area.
 func UpdateWorkingArea(c *gin.Context) {
 	userRole, exists := c.Get("role")
 	if !exists || userRole != "ADMIN" {
@@ -64,10 +86,25 @@ func UpdateWorkingArea(c *gin.Context) {
 	id := c.Param("id")
 	workingAreaID, _ := strconv.ParseUint(id, 10, 64)
 
-	var workingArea models.WorkingArea
-	if err := c.BindJSON(&workingArea); err != nil {
+	var req UpdateWorkingAreaRequest
+	if err := c.BindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to read body"})
 		return
+	}
+
+	var workingArea models.WorkingArea
+	workingArea.AreaName = req.AreaName
+
+	for _, activityReq := range req.Activities {
+		activity := models.Activity{ActivityName: activityReq.ActivityName}
+
+		if len(activityReq.Items) > 0 {
+			for _, item := range activityReq.Items {
+				activity.Items = append(activity.Items, models.ActivityItem{Name: item})
+			}
+		}
+
+		workingArea.Activities = append(workingArea.Activities, activity)
 	}
 
 	result := initializers.DB.Model(&models.WorkingArea{}).Where("id = ?", workingAreaID).Updates(&workingArea)
@@ -77,24 +114,4 @@ func UpdateWorkingArea(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{"message": "Working area updated successfully"})
-}
-
-// DeleteWorkingArea deletes a working area by ID.
-func DeleteWorkingArea(c *gin.Context) {
-	userRole, exists := c.Get("role")
-	if !exists || userRole != "ADMIN" {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
-		return
-	}
-
-	id := c.Param("id")
-	workingAreaID, _ := strconv.ParseUint(id, 10, 64)
-
-	result := initializers.DB.Delete(&models.WorkingArea{}, workingAreaID)
-	if result.Error != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Failed to delete working area"})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{"message": "Working area deleted successfully"})
 }
